// vos.ai — Multi-tenant platform schema (v2 foundation)
// Deploy target: fresh PostgreSQL (Neon). Legacy single-tenant schema lives in schema.legacy.prisma.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ---------------------------------------------------------------------------
// Enums
// ---------------------------------------------------------------------------

enum CompanyStatus {
  ACTIVE
  INACTIVE
}

enum MemberStatus {
  ACTIVE
  INVITED
  SUSPENDED
}

enum ProductStatus {
  DRAFT
  ACTIVE
  INACTIVE
  ARCHIVED
}

enum ProductCostSource {
  MANUAL
  RECIPE
}

enum AuditAction {
  CREATE
  UPDATE
  DELETE
  LOGIN
  LOGOUT
  EXPORT
  IMPORT
}

enum AiMessageRole {
  SYSTEM
  USER
  ASSISTANT
  TOOL
}

// ---------------------------------------------------------------------------
// Platform — Tenancy & identity
// ---------------------------------------------------------------------------

model Company {
  id        String        @id @default(cuid())
  name      String
  taxId     String?       @map("tax_id")
  address   String?
  phone     String?
  email     String?
  status    CompanyStatus @default(ACTIVE)
  /// Tipo de negocio del onboarding (cafe, restaurant, …).
  businessType String?    @map("business_type")
  createdAt DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime      @updatedAt @map("updated_at") @db.Timestamptz(6)

  members          CompanyMember[]
  roles            Role[]
  companyModules   CompanyModule[]
  productCategories ProductCategory[]
  products         Product[]
  productImages    ProductImage[]
  aiAgents         AiAgent[]
  aiConversations  AiConversation[]
  aiMessages       AiMessage[]
  auditLogs        AuditLog[]

  @@index([status], map: "idx_companies_status")
  @@index([name], map: "idx_companies_name")
  @@map("companies")
}

/// Global identity (one email = one login across companies).
model User {
  id           String   @id @default(cuid())
  email        String   @unique
  passwordHash String   @map("password_hash")
  name         String
  active       Boolean  @default(true)
  createdAt    DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt    DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  memberships     CompanyMember[]
  aiConversations AiConversation[]
  auditLogs       AuditLog[]

  @@index([active], map: "idx_users_active")
  @@map("users")
}

/// Membership: user ↔ company (many-to-many).
model CompanyMember {
  id        String       @id @default(cuid())
  companyId String       @map("company_id")
  company   Company      @relation(fields: [companyId], references: [id], onDelete: Cascade)
  userId    String       @map("user_id")
  user      User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  status    MemberStatus @default(ACTIVE)
  joinedAt  DateTime     @default(now()) @map("joined_at") @db.Timestamptz(6)

  memberRoles CompanyMemberRole[]

  @@unique([companyId, userId], map: "company_members_company_user_key")
  @@index([companyId], map: "idx_company_members_company_id")
  @@index([userId], map: "idx_company_members_user_id")
  @@index([status], map: "idx_company_members_status")
  @@map("company_members")
}

// ---------------------------------------------------------------------------
// RBAC — Roles & permissions (scoped per company or system-wide)
// ---------------------------------------------------------------------------

model Role {
  id          String  @id @default(cuid())
  companyId   String? @map("company_id")
  company     Company? @relation(fields: [companyId], references: [id], onDelete: Cascade)
  slug        String
  name        String
  description String?
  isSystem    Boolean @default(false) @map("is_system")
  createdAt   DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  rolePermissions RolePermission[]
  memberRoles     CompanyMemberRole[]

  @@unique([companyId, slug], map: "roles_company_slug_key")
  @@index([companyId], map: "idx_roles_company_id")
  @@map("roles")
}

model Permission {
  id          String @id @default(cuid())
  slug        String @unique
  moduleSlug  String @map("module_slug")
  name        String
  description String?

  rolePermissions RolePermission[]

  @@index([moduleSlug], map: "idx_permissions_module_slug")
  @@map("permissions")
}

model RolePermission {
  roleId       String @map("role_id")
  role         Role   @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permissionId String @map("permission_id")
  permission   Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@id([roleId, permissionId])
  @@map("role_permissions")
}

model CompanyMemberRole {
  companyMemberId String        @map("company_member_id")
  companyMember   CompanyMember @relation(fields: [companyMemberId], references: [id], onDelete: Cascade)
  roleId          String        @map("role_id")
  role            Role          @relation(fields: [roleId], references: [id], onDelete: Cascade)

  @@id([companyMemberId, roleId])
  @@map("company_member_roles")
}

// ---------------------------------------------------------------------------
// Modules — Feature flags per company
// ---------------------------------------------------------------------------

model Module {
  id          String  @id @default(cuid())
  slug        String  @unique
  name        String
  description String?
  sortOrder   Int     @default(0) @map("sort_order")
  isActive    Boolean @default(true) @map("is_active")

  companyModules CompanyModule[]

  @@map("modules")
}

model CompanyModule {
  id        String   @id @default(cuid())
  companyId String   @map("company_id")
  company   Company  @relation(fields: [companyId], references: [id], onDelete: Cascade)
  moduleId  String   @map("module_id")
  module    Module   @relation(fields: [moduleId], references: [id], onDelete: Restrict)
  isEnabled Boolean  @default(true) @map("is_enabled")
  enabledAt DateTime @default(now()) @map("enabled_at") @db.Timestamptz(6)

  @@unique([companyId, moduleId], map: "company_modules_company_module_key")
  @@index([companyId], map: "idx_company_modules_company_id")
  @@index([isEnabled], map: "idx_company_modules_is_enabled")
  @@map("company_modules")
}

// ---------------------------------------------------------------------------
// Products module (multi-tenant)
// ---------------------------------------------------------------------------

model ProductCategory {
  id        String   @id @default(cuid())
  companyId String   @map("company_id")
  company   Company  @relation(fields: [companyId], references: [id], onDelete: Cascade)
  name      String
  slug      String
  parentId  String?  @map("parent_id")
  parent    ProductCategory? @relation("CategoryTree", fields: [parentId], references: [id], onDelete: SetNull)
  children  ProductCategory[] @relation("CategoryTree")
  sortOrder Int      @default(0) @map("sort_order")
  active    Boolean  @default(true)
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  products Product[]

  @@unique([companyId, slug], map: "product_categories_company_slug_key")
  @@index([companyId], map: "idx_product_categories_company_id")
  @@index([parentId], map: "idx_product_categories_parent_id")
  @@map("product_categories")
}

model Product {
  id              String        @id @default(cuid())
  companyId       String        @map("company_id")
  company         Company       @relation(fields: [companyId], references: [id], onDelete: Cascade)
  categoryId      String        @map("category_id")
  category        ProductCategory @relation(fields: [categoryId], references: [id], onDelete: Restrict)
  name            String
  description     String        @default("")
  sku             String?
  internalCode    String?       @map("internal_code")
  salePrice       Decimal       @map("sale_price") @db.Decimal(14, 2)
  cost            Decimal       @default(0) @db.Decimal(14, 2)
  costSource      ProductCostSource @default(MANUAL) @map("cost_source")
  /// Read-only: PostgreSQL GENERATED STORED column (see vos-platform-init.sql).
  marginPercent   Decimal?      @map("margin_percent") @db.Decimal(8, 4) @default(dbgenerated())
  status          ProductStatus @default(DRAFT)
  primaryImageUrl String?       @map("primary_image_url")
  createdAt       DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt       DateTime      @updatedAt @map("updated_at") @db.Timestamptz(6)

  images ProductImage[]

  @@unique([companyId, sku], map: "products_company_sku_key")
  @@unique([companyId, internalCode], map: "products_company_internal_code_key")
  @@index([companyId], map: "idx_products_company_id")
  @@index([categoryId], map: "idx_products_category_id")
  @@index([status], map: "idx_products_status")
  @@index([companyId, status], map: "idx_products_company_status")
  @@map("products")
}

model ProductImage {
  id        String  @id @default(cuid())
  companyId String  @map("company_id")
  company   Company @relation(fields: [companyId], references: [id], onDelete: Cascade)
  productId String  @map("product_id")
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)
  url       String
  altText   String? @map("alt_text")
  sortOrder Int     @default(0) @map("sort_order")
  isPrimary Boolean @default(false) @map("is_primary")
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([companyId], map: "idx_product_images_company_id")
  @@index([productId], map: "idx_product_images_product_id")
  @@index([productId, isPrimary], map: "idx_product_images_product_primary")
  @@map("product_images")
}

// ---------------------------------------------------------------------------
// AI — Agents, conversations, messages (future-ready)
// ---------------------------------------------------------------------------

model AiAgent {
  id           String  @id @default(cuid())
  companyId    String  @map("company_id")
  company      Company @relation(fields: [companyId], references: [id], onDelete: Cascade)
  name         String
  slug         String
  systemPrompt String? @map("system_prompt")
  model        String  @default("gpt-4o-mini")
  active       Boolean @default(true)
  config       Json?   @db.JsonB
  createdAt    DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt    DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  conversations AiConversation[]

  @@unique([companyId, slug], map: "ai_agents_company_slug_key")
  @@index([companyId], map: "idx_ai_agents_company_id")
  @@map("ai_agents")
}

model AiConversation {
  id        String   @id @default(cuid())
  companyId String   @map("company_id")
  company   Company  @relation(fields: [companyId], references: [id], onDelete: Cascade)
  agentId   String?  @map("agent_id")
  agent     AiAgent? @relation(fields: [agentId], references: [id], onDelete: SetNull)
  userId    String?  @map("user_id")
  user      User?    @relation(fields: [userId], references: [id], onDelete: SetNull)
  title     String?
  metadata  Json?    @db.JsonB
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  messages AiMessage[]

  @@index([companyId], map: "idx_ai_conversations_company_id")
  @@index([agentId], map: "idx_ai_conversations_agent_id")
  @@index([userId], map: "idx_ai_conversations_user_id")
  @@map("ai_conversations")
}

model AiMessage {
  id             String        @id @default(cuid())
  companyId      String        @map("company_id")
  company        Company       @relation(fields: [companyId], references: [id], onDelete: Cascade)
  conversationId String        @map("conversation_id")
  conversation   AiConversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  role           AiMessageRole
  content        String
  tokenCount     Int?          @map("token_count")
  metadata       Json?         @db.JsonB
  createdAt      DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([companyId], map: "idx_ai_messages_company_id")
  @@index([conversationId], map: "idx_ai_messages_conversation_id")
  @@index([createdAt], map: "idx_ai_messages_created_at")
  @@map("ai_messages")
}

// ---------------------------------------------------------------------------
// Audit
// ---------------------------------------------------------------------------

model AuditLog {
  id         String      @id @default(cuid())
  companyId  String?     @map("company_id")
  company    Company?    @relation(fields: [companyId], references: [id], onDelete: SetNull)
  userId     String?     @map("user_id")
  user       User?       @relation(fields: [userId], references: [id], onDelete: SetNull)
  action     AuditAction
  tableName  String      @map("table_name")
  recordId   String?     @map("record_id")
  oldValues  Json?       @map("old_values") @db.JsonB
  newValues  Json?       @map("new_values") @db.JsonB
  ipAddress  String?     @map("ip_address")
  createdAt  DateTime    @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([companyId], map: "idx_audit_logs_company_id")
  @@index([userId], map: "idx_audit_logs_user_id")
  @@index([tableName], map: "idx_audit_logs_table_name")
  @@index([createdAt], map: "idx_audit_logs_created_at")
  @@index([companyId, createdAt], map: "idx_audit_logs_company_created")
  @@map("audit_logs")
}
