generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ---------------------------------------------------------------------------
// Enums (labels stored in UPPERCASE in PostgreSQL)
// ---------------------------------------------------------------------------

enum UserRole {
  ADMIN
  EMPLEADO
}

enum CategoryType {
  PRODUCT
  INVENTORY
  EXPENSE
}

enum SaleSource {
  CART
  AI
  MANUAL
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
}

enum PaymentGateway {
  STRIPE
  WOMPI
  MERCADOPAGO
}

enum StockMovementType {
  IN
  OUT
  SALE
  ADJUSTMENT
  WASTE
}

enum CartStatus {
  ACTIVE
  CHECKED_OUT
  ABANDONED
}

enum PartnerContributionType {
  DINERO
  INSUMO
}

// ---------------------------------------------------------------------------
// Models
// ---------------------------------------------------------------------------

model User {
  id           String   @id @default(cuid())
  email        String   @unique
  passwordHash String   @map("password_hash")
  name         String
  role         UserRole @default(EMPLEADO)
  active       Boolean  @default(true)
  createdAt    DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt    DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  carts          Cart[]
  sales          Sale[]          @relation("SaleRecordedBy")
  expenses       Expense[]
  stockMovements StockMovement[] @relation("StockMovementUser")
  tasks          Task[]          @relation("TaskAssignee")

  @@index([email], map: "idx_users_email")
  @@index([role], map: "idx_users_role")
  @@index([active], map: "idx_users_active")
  @@map("users")
}

model Category {
  id        String       @id @default(cuid())
  name      String       @unique
  type      CategoryType
  parentId  String?      @map("parent_id")
  parent    Category?    @relation("CategoryChildren", fields: [parentId], references: [id], onDelete: SetNull)
  children  Category[]   @relation("CategoryChildren")
  createdAt DateTime     @default(now()) @map("created_at") @db.Timestamptz(6)

  products       Product[]
  inventoryItems Inventory[]
  expenses       Expense[]

  @@index([parentId], map: "idx_categories_parent_id")
  @@index([type], map: "idx_categories_type")
  @@map("categories")
}

model Product {
  id          String    @id @default(cuid())
  name        String
  description String    @default("")
  price       Decimal   @db.Decimal(12, 2)
  categoryId  String    @map("category_id")
  category    Category  @relation(fields: [categoryId], references: [id], onDelete: Restrict)
  type        String
  imageUrl    String?   @map("image_url")
  size        String?
  active      Boolean   @default(true)
  deletedAt   DateTime? @map("deleted_at") @db.Timestamptz(6)

  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  recipe    Recipe?
  saleLines SaleLine[]
  cartItems CartItem[]

  @@index([categoryId], map: "idx_products_category")
  @@index([deletedAt], map: "idx_products_deleted_at")
  @@index([active], map: "idx_products_active")
  @@index([type], map: "idx_products_type")
  @@map("products")
}

model Inventory {
  id         String   @id @default(cuid())
  name       String
  categoryId String   @map("category_id")
  category   Category @relation(fields: [categoryId], references: [id], onDelete: Restrict)

  quantity  Decimal   @db.Decimal(12, 4)
  unit      String
  unitCost  Decimal   @map("unit_cost") @db.Decimal(12, 2)
  supplier  String?
  lot       String?
  minStock  Decimal?  @map("min_stock") @db.Decimal(12, 4)
  deletedAt DateTime? @map("deleted_at") @db.Timestamptz(6)

  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  recipeIngredients    RecipeIngredient[]
  stockMovements       StockMovement[]
  partnerContributions PartnerContribution[]

  @@index([categoryId], map: "idx_inventory_category")
  @@index([deletedAt], map: "idx_inventory_deleted_at")
  @@map("inventory")
}

/// Una receta por producto (`product_id` único). Columna SQL `yield` mapeada a `recipeYield` (evita palabra reservada en TS).
model Recipe {
  id        String  @id @default(cuid())
  productId String  @unique @map("product_id")
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  recipeYield Decimal @default(1) @map("yield") @db.Decimal(12, 4)

  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  ingredients RecipeIngredient[]

  @@index([productId], map: "idx_recipes_product_id")
  @@map("recipes")
}

model RecipeIngredient {
  id              String    @id @default(cuid())
  recipeId        String    @map("recipe_id")
  recipe          Recipe    @relation(fields: [recipeId], references: [id], onDelete: Cascade)
  inventoryItemId String    @map("inventory_item_id")
  inventoryItem   Inventory @relation(fields: [inventoryItemId], references: [id], onDelete: Restrict)

  quantity Decimal @db.Decimal(12, 4)
  unit     String

  @@index([recipeId], map: "idx_recipe_ingredients_recipe_id")
  @@index([inventoryItemId], map: "idx_recipe_ingredients_inventory_item_id")
  @@map("recipe_ingredients")
}

model Cart {
  id        String     @id @default(cuid())
  userId    String?    @map("user_id")
  user      User?      @relation(fields: [userId], references: [id], onDelete: SetNull)
  sessionId String?    @map("session_id")
  status    CartStatus @default(ACTIVE)

  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  items CartItem[]
  sales Sale[]

  @@index([userId], map: "idx_carts_user_id")
  @@index([sessionId], map: "idx_carts_session_id")
  @@index([status], map: "idx_carts_status")
  @@map("carts")
}

model CartItem {
  id        String  @id @default(cuid())
  cartId    String  @map("cart_id")
  cart      Cart    @relation(fields: [cartId], references: [id], onDelete: Cascade)
  productId String  @map("product_id")
  product   Product @relation(fields: [productId], references: [id], onDelete: Restrict)

  quantity  Decimal @db.Decimal(12, 4)
  unitPrice Decimal @map("unit_price") @db.Decimal(12, 2)

  @@index([cartId], map: "idx_cart_items_cart_id")
  @@index([productId], map: "idx_cart_items_product_id")
  @@map("cart_items")
}

model Sale {
  id            String     @id @default(cuid())
  saleDate      DateTime   @map("sale_date") @db.Timestamptz(6)
  total         Decimal    @db.Decimal(12, 2)
  paymentMethod String?    @map("payment_method")
  source        SaleSource @default(MANUAL)

  userId String? @map("user_id")
  user   User?   @relation("SaleRecordedBy", fields: [userId], references: [id], onDelete: SetNull)
  cartId String? @map("cart_id")
  cart   Cart?   @relation(fields: [cartId], references: [id], onDelete: SetNull)

  mesa  String?
  notes String?

  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  lines          SaleLine[]
  payments       Payment[]
  stockMovements StockMovement[]

  @@index([saleDate], map: "idx_sales_sale_date")
  @@index([userId], map: "idx_sales_user_id")
  @@index([cartId], map: "idx_sales_cart_id")
  @@index([source], map: "idx_sales_source")
  @@map("sales")
}

model SaleLine {
  id          String   @id @default(cuid())
  saleId      String   @map("sale_id")
  sale        Sale     @relation(fields: [saleId], references: [id], onDelete: Cascade)
  productId   String?  @map("product_id")
  product     Product? @relation(fields: [productId], references: [id], onDelete: SetNull)
  productName String   @map("product_name")

  quantity   Decimal  @db.Decimal(12, 4)
  unitPrice  Decimal  @map("unit_price") @db.Decimal(12, 2)
  costAtSale Decimal? @map("cost_at_sale") @db.Decimal(12, 2)
  profit     Decimal? @db.Decimal(12, 2)

  @@index([saleId], map: "idx_sale_lines_sale_id")
  @@index([productId], map: "idx_sale_lines_product_id")
  @@map("sale_lines")
}

model Payment {
  id               String         @id @default(cuid())
  saleId           String         @map("sale_id")
  sale             Sale           @relation(fields: [saleId], references: [id], onDelete: Cascade)
  gateway          PaymentGateway
  gatewayPaymentId String?        @unique @map("gateway_payment_id")
  amount           Decimal        @db.Decimal(12, 2)
  status           PaymentStatus  @default(PENDING)
  metadata         Json?          @db.JsonB

  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  @@index([saleId], map: "idx_payments_sale_id")
  @@index([gatewayPaymentId], map: "idx_payments_gateway_id")
  @@index([status], map: "idx_payments_status")
  @@map("payments")
}

model StockMovement {
  id              String    @id @default(cuid())
  inventoryItemId String    @map("inventory_item_id")
  inventoryItem   Inventory @relation(fields: [inventoryItemId], references: [id], onDelete: Restrict)
  saleId          String?   @map("sale_id")
  sale            Sale?     @relation(fields: [saleId], references: [id], onDelete: SetNull)
  userId          String?   @map("user_id")
  user            User?     @relation("StockMovementUser", fields: [userId], references: [id], onDelete: SetNull)

  type         StockMovementType
  quantity     Decimal           @db.Decimal(12, 4)
  unit         String
  reason       String?
  notes        String?
  movementDate DateTime          @map("movement_date") @db.Timestamptz(6)
  createdAt    DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([inventoryItemId], map: "idx_stock_movements_inventory_item_id")
  @@index([saleId], map: "idx_stock_movements_sale_id")
  @@index([userId], map: "idx_stock_movements_user_id")
  @@index([movementDate], map: "idx_stock_movements_date")
  @@index([type], map: "idx_stock_movements_type")
  @@map("stock_movements")
}

model Expense {
  id          String   @id @default(cuid())
  description String
  amount      Decimal  @db.Decimal(12, 2)
  expenseDate DateTime @map("expense_date") @db.Timestamptz(6)

  categoryId String   @map("category_id")
  category   Category @relation(fields: [categoryId], references: [id], onDelete: Restrict)
  userId     String?  @map("user_id")
  user       User?    @relation(fields: [userId], references: [id], onDelete: SetNull)

  type      String
  relatedTo String?  @map("related_to")
  notes     String?
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([expenseDate], map: "idx_expenses_expense_date")
  @@index([categoryId], map: "idx_expenses_category")
  @@index([userId], map: "idx_expenses_user_id")
  @@map("expenses")
}

model Partner {
  id     String  @id @default(cuid())
  name   String
  email  String?
  phone  String?
  active Boolean @default(true)
  notes  String?

  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime @updatedAt @map("updated_at") @db.Timestamptz(6)

  contributions PartnerContribution[]

  @@index([email], map: "idx_partners_email")
  @@index([active], map: "idx_partners_active")
  @@map("partners")
}

model PartnerContribution {
  id        String                  @id @default(cuid())
  partnerId String                  @map("partner_id")
  partner   Partner                 @relation(fields: [partnerId], references: [id], onDelete: Cascade)
  type      PartnerContributionType

  amount          Decimal?   @db.Decimal(12, 2)
  inventoryItemId String?    @map("inventory_item_id")
  inventoryItem   Inventory? @relation(fields: [inventoryItemId], references: [id], onDelete: SetNull)
  quantity        Decimal?   @db.Decimal(12, 4)

  notes            String?
  contributionDate DateTime @map("contribution_date") @db.Timestamptz(6)
  createdAt        DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([partnerId], map: "idx_partner_contributions_partner_id")
  @@index([inventoryItemId], map: "idx_partner_contributions_inventory_item_id")
  @@index([contributionDate], map: "idx_partner_contributions_date")
  @@index([type], map: "idx_partner_contributions_type")
  @@map("partner_contributions")
}

model Task {
  id          String  @id @default(cuid())
  title       String
  description String?
  category    String?
  priority    String?

  completed    Boolean @default(false)
  assignedToId String? @map("assigned_to")
  assignedTo   User?   @relation("TaskAssignee", fields: [assignedToId], references: [id], onDelete: SetNull)

  dueDate     DateTime? @map("due_date") @db.Timestamptz(6)
  completedAt DateTime? @map("completed_at") @db.Timestamptz(6)
  tags        String?
  createdAt   DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([completed], map: "idx_tasks_completed")
  @@index([assignedToId], map: "idx_tasks_assigned_to")
  @@index([dueDate], map: "idx_tasks_due_date")
  @@map("tasks")
}
